--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">StorageDemo</string>
+    <string name="task_image">Task Image</string>
+    <string name="task_video">Task Video</string>
+    <string name="task_pdf">Task PDF</string>
+    <string name="create_folder_in_directory_documents">Create Folder in DIRECTORY_DOCUMENTS</string>
 </resources>
