--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="task_video">Task Video</string>
     <string name="task_pdf">Task PDF</string>
     <string name="create_folder_in_directory_documents">Create Folder in DIRECTORY_DOCUMENTS</string>
+    <string name="when_capture_image_finish_then_show_app_and_save_directory_documents">When capture image finish then show app and save DIRECTORY_DOCUMENTS</string>
 </resources>
